# faiss-search

./: .gitignore  Dockerfile  LICENSE  README.md  faiss_demo.ipynb  pyproject.toml  requirements.txt  search_directory_demo.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: CI.yml
faiss_search/: __init__.py  dataset_variability.py  search_directory.py
faiss_search/faiss_index/: HNSW_index.py  IVF_flat_index.py  faiss_strategy.py  flat_index.py  general_index.py  index_creator.py
faiss_search/tools/: errors.py
tests/: test_dataset_variability.py  test_faiss_index.py  test_search_directory.py
tests/resources/sample_embedding_files/: paraphrasemini-space-embeddings.npy
tests/resources/sample_text_files/: CPP_disability_benefits.txt  CPP_retirement_pension.txt  EI_regular_benefits.txt  aviation_safety.txt  canadian_constitution.txt  climate_change_causes.txt  coronavirus_symptoms.txt  documents_for_express_entry.txt  express_entry.txt  funding_culture_history_sport.txt  healthcare_system.txt  history_of_canada.txt  how_courts_are_organized.txt  national_security_act.txt  net_zero_emissions_by_2050.txt  origin_of_name_canada.txt  personal_income_tax.txt  start_a_business.txt  travel_advisories.txt  visitors_to_canada.txt
tests/resources/search_directory_test_files/: report_modified.csv
