[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faiss-search"
description = "A semantic embedding and FAISS search pipeline for document retrieval"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dynamic = ["version", "dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"]}